--- a/tree/src/main/resources/application.yml
+++ b/tree/src/main/resources/application.yml
@@ -1,1 +1,27 @@
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+      enabled: true
 
+  main:
+    allow-bean-definition-overriding: 'true'
+
+  jackson:
+    serialization:
+      INDENT_OUTPUT: true
+
+  datasource:
+    driver-class-name: ${DB_CLASS}
+    username: ${DB_USER}
+    url: ${DB_URL}
+    password: ${DB_PASSWORD}
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+
+server:
+  port: 9080
