--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,17 @@ spring:
   main:
     allow-bean-definition-overriding: 'true'
 
-  jackson:
-    serialization:
-      INDENT_OUTPUT: true
+  mail:
+    host: ${MAIL_HOST}
+    port: ${MAIL_PORT}
+    username: ${MAIL_USER}
+    password: ${MAIL_PASSWORD}
+    properties:
+      mail:
+        smtp:
+          auth:
+          starttls:
+            enable: true
 
   datasource:
     driver-class-name: ${DB_CLASS}
