add :: swagger 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,3 +44,13 @@ jwt:
 
 server:
   port: 9080
+
+springdoc:
+  packages-to-scan: com.chr.tree.domain
+  default-consumes-media-type: application/json;charset=UTF-8
+  default-produces-media-type: application/json;charset=UTF-8
+  swagger-ui:
+    disable-swagger-default-url: false
+    display-request-duration: true
+    operations-sorter: alpha
+    path: /swagger-ui
